--- a/resources/private/authority-admin/index.html
+++ b/resources/private/authority-admin/index.html
@@ -9,16 +9,10 @@
         <div class="breadcrumb">
             <div class="container">
                 <ul id="applicationTabs" class="tabs">
-                    <li><a class="link-btn" href="#!/users" data-test-id="users" data-bind="ltext: 'auth-admin.users'"></a></li>
-                    <li><a class="link-btn" href="#!/areas" data-test-id="" data-bind="ltext: 'auth-admin.areas'"></a></li>
-                    <li><a class="link-btn" href="#!/backends" data-test-id="" data-bind="ltext: 'auth-admin.backends'"></a></li>
-                    <li><a class="link-btn" href="#!/admin" data-test-id="" data-bind="ltext: 'auth-admin.admin'"></a></li>
-<!--                     <li><a class="link-btn" href="#!/organizations">Organisaatiot</a></li>
-                    <li><a class="link-btn" href="#!/companies">Yritykset</a></li>
-                    <li><a class="link-btn" href="#!/features">Feature-flagit</a></li>
-                    <li><a class="link-btn" href="#!/actions">Toiminnot</a></li>
-                    <li><a class="link-btn" href="#!/screenmessages">Ennakkoilmoitukset</a></li>
-                    <li><a class="link-btn" href="#!/notifications">Kayttajailmoitukset</a></li> -->
+                    <li><a class="link-btn" href="#!/users" data-test-id="users" data-bind="ltext: 'auth-admin.users', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'users'}"></a></li>
+                    <li><a class="link-btn" href="#!/applications" data-test-id="" data-bind="ltext: 'auth-admin.admin', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'applications'}"></a></li>
+                    <li><a class="link-btn" href="#!/backends" data-test-id="" data-bind="ltext: 'auth-admin.backends', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'backends'}"></a></li>
+                    <li><a class="link-btn" href="#!/areas" data-test-id="" data-bind="ltext: 'auth-admin.areas', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'areas'}"></a></li>
                 </ul>
             </div>
         </div>
