--- a/resources/private/authority-admin/organization-areas.html
+++ b/resources/private/authority-admin/organization-areas.html
@@ -2,17 +2,17 @@
 <html>
   <body>
     <section class="page" id="areas" >
-      <div class="container authority-admin-alueelliset-organisaatiot">
-        <h1 data-bind="ltext: 'auth-admin.alueelliset-organisaatiot'"></h1>
+      <div class="container">
+        <section class="authority-admin-alueelliset-organisaatiot">
+          <h2 data-bind="ltext: 'auth-admin.alueelliset-organisaatiot'"></h2>
 
-        <div class="organization-areas">
-          <!-- ko if: organization.features -->
-          <div class="organization-areas-map" data-bind="component: {name: 'openlayers-map', params: {geoJsonFeatures: organization.features}}"></div>
-          <!-- /ko -->
-          <div data-bind="component: {name: 'upload', params: {onSuccess: function(res) {organization.features(res.areas);}}}"></div>
-        </div>
-
-
+          <div class="organization-areas">
+            <!-- ko if: organization.features -->
+            <div class="organization-areas-map" data-bind="component: {name: 'openlayers-map', params: {geoJsonFeatures: organization.features}}"></div>
+            <!-- /ko -->
+            <div data-bind="component: {name: 'upload', params: {onSuccess: function(res) {organization.features(res.areas);}}}"></div>
+          </div>
+        </section>
       </div>
     </section>
   </body>
