Splitted operations and attachments to own tabs

--- a/resources/private/authority-admin/index.html
+++ b/resources/private/authority-admin/index.html
@@ -11,6 +11,8 @@
                 <ul id="applicationTabs" class="tabs">
                     <li><a class="link-btn" href="#!/users" data-test-id="users" data-bind="ltext: 'auth-admin.users', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'users'}"></a></li>
                     <li><a class="link-btn" href="#!/applications" data-test-id="" data-bind="ltext: 'auth-admin.admin', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'applications'}"></a></li>
+                    <li><a class="link-btn" href="#!/operations" data-test-id="" data-bind="ltext: 'auth-admin.selected-operations', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'operations'}"></a></li>
+                    <li><a class="link-btn" href="#!/attachments" data-test-id="" data-bind="ltext: 'auth-admin.operations-attachments', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'attachmentes'}"></a></li>
                     <li><a class="link-btn" href="#!/backends" data-test-id="" data-bind="ltext: 'auth-admin.backends', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'backends'}"></a></li>
                     <li><a class="link-btn" href="#!/areas" data-test-id="" data-bind="ltext: 'auth-admin.areas', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'areas'}"></a></li>
                 </ul>
