--- a/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
+++ b/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
@@ -107,7 +107,11 @@
                            params: {lhtml: 'help.' + application.permitType() + '.neighborsDesc'}
                            }"></span>
           <div data-bind="template: {name: 'neighbors-table-template', data: {neighbors: application.neighbors, localisationKeys: {missing: 'neighbors.missing'}}}"></div>
-          <button data-bind="click: neighborActions.manage, ltext: 'neighbors.manage', visible: $root.authorization.ok('neighbor-add')" class="btn btn-primary modal" data-test-id="manage-neighbors"></button>
+          <button data-bind="click: openNeighborsPage,
+                             ltext: 'neighbors.manage',
+                             visible: $root.authorization.ok('neighbor-add')"
+                             class="btn btn-primary modal"
+                             data-test-id="manage-neighbors"></button>
       </div>
 
     </script>
