fix styles on muutHankkeet table (add style class and make message-panel relative)

--- a/resources/private/ui-components/foreman-other-applications/foreman-other-applications-template.html
+++ b/resources/private/ui-components/foreman-other-applications/foreman-other-applications-template.html
@@ -4,7 +4,7 @@
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="foreman-other-applications-template">
       <label class="form-label form-label-table" data-bind="ltext: 'muutHankkeet.label'"></label>
-      <table data-test-id="foreman-other-applications-table">
+      <table data-bind="attr: {'class': _.last(path) + '-table'}" data-test-id="foreman-other-applications-table">
         <thead>
           <tr>
             <th colspan="5"></th>
