--- a/resources/private/ui-components/statement/statement-edit/statement-edit-template.html
+++ b/resources/private/ui-components/statement/statement-edit/statement-edit-template.html
@@ -5,21 +5,23 @@
     <script type="text/x-jquery-tmpl" id="statement-edit-template">
 
     <div class="headerarea">
-      <h1>
-        <span data-bind="with: application">
-          <span data-bind="text: title"></span>:
+      <div>
+        <h1>
+          <span data-bind="with: application">
+            <span data-bind="text: title"></span>:
+          </span>
+          <span data-bind="with: data">
+            <span data-bind="text: person.text"></span>
+          </span>
+        </h1>
+        <span data-bind="visible: isDraft" class="statement-state-indicator">
+          <i class="lupicon-circle-attention"></i>
+          <span data-bind="ltext: 'luonnos'">Luonnos</span>
         </span>
-        <span data-bind="with: data">
-          <span data-bind="text: person.text"></span>
-        </span>
-      </h1>
-      <span data-bind="visible: isDraft" id="statement-draft-indicator">
-        <i class="lupicon-circle-attention"></i>
-        <span>Luonnos</span>
-      </span>
-      <div data-bind="with: data" id="statement-covering-note">
-        <span data-bind="text: saateText">Saate</span>
       </div>
+      <p data-bind="with: data" id="statement-covering-note">
+        <span data-bind="text: saateText">Saate</span>
+      </p>
     </div>
 
     <div class="statement-info">
@@ -30,7 +32,7 @@
             <img src="/img/ajax-loader-12.gif" alt="..." width="12" height="12" id="statement-type-select-loader" style="display: none;">
           </label>
           <select id="statement-type-select" 
-                  class="form-input combobox" 
+                  class="form-input combobox select" 
                   data-bind="options: statuses,
                              optionsValue: 'id',
                              optionsText: 'name',
